--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            GoIT team
+            GoIT Team
           </a>
         </p>
       </div>
