--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -50,7 +50,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            GoIT team
+            GoIT Team
           </a>
         </p>
       </div>
