--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -50,7 +50,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            GoIT team
+            GoIT Team
           </a>
         </p>
       </div>
