--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snack Bar</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -25,7 +29,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link {=$highlight-curr}" href="./2-snackbar.html"
-                >Snackbar</a
+                >Snack bar</a
               >
             </li>
           </ul>
@@ -37,6 +41,24 @@
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome</span> to Snack Bar
         </h1>
+        <form class="form">
+          <label>
+            Delay (ms)
+            <input type="number" name="delay" required />
+          </label>
+          <fieldset>
+            <legend>State</legend>
+            <label>
+              <input type="radio" name="state" value="fulfilled" required />
+              Fulfilled
+            </label>
+            <label>
+              <input type="radio" name="state" value="rejected" required />
+              Rejected
+            </label>
+          </fieldset>
+          <button type="submit">Create notification</button>
+        </form>
         <a class="back-link" href="./index.html">Go back</a>
       </div>
     </main>
@@ -55,5 +77,7 @@
         </p>
       </div>
     </footer>
+    <script src="iziToast.min.js" type="text/javascript"></script>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
